<resources>
    <string name="app_name">ContextSample</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_refresh">Refresh</string>

    <!-- UI Components -->
    <string name="txtTitleSplash">Flybits</string>
    <string name="txtSubtitleSplash">flybits.com\n@flybitsinc</string>

    <!-- Errors -->
    <string name="errorTitleNoInternet">No internet connection present.</string>
    <string name="errorMessageNoInternet">Please connect to the internet and try again.</string>
    <string name="errorBtnPositive">Got it!</string>
    <string name="errorTitleLogin">Login Error!</string>

    <!-- Time Updates -->
    <string name="txtLastUpdated">Last Updated: %s</string>
    <string name="txtUpdatedAt">Updated At: %s</string>

    <!-- Texts -->
    <string name="txtHomeDescription">Welcome to Flybits\' Context sample application. Through this application developers will have a
    better understanding of all of the contextual plugins created by Flybits. Additionally, this sample demonstrates how contextual
    information can be updated, retrieved, and displayed within the application\'s presentation layer.</string>
    <string name="txtAvailableContext">Currently the context plugin implemented in this version are:</string>

    <!-- Context List -->
    <string name="context1">Activity Recognition</string>
    <string name="context2">Battery</string>
    <string name="context4">Carrier (SIM)</string>
    <string name="context5">Fitness (Steps)</string>
    <string name="context6">Language</string>
    <string name="context7">Location</string>
    <string name="context8">Network Connectivity</string>

    <!-- Activity Context -->
    <string name="txtActivityStationary">Stationary: %s</string>
    <string name="txtActivityRunning">Running: %s</string>
    <string name="txtActivityWalking">Walking: %s</string>
    <string name="txtActivityOnBike">Cycling: %s</string>
    <string name="txtActivityDriving">Driving: %s</string>
    <string name="txtActivityUnknown">Unknown: %s</string>

    <!-- Battery Context -->
    <string name="txtBatteryIsCharging">Is Charging: %s</string>
    <string name="txtBatteryPercentage">Percentage: %d</string>

    <!-- Carrier Context -->
    <string name="txtCarrierMNC">Carrier MNC: %s</string>
    <string name="txtCarrierMCC">Carrier MCC: %s</string>

    <!-- Language Context -->
    <string name="txtLanguageCode">Language Code: %s</string>

    <!-- Fitness Context -->
    <string name="txtFitnessSteps">Steps: %d</string>

    <!-- Latitude Context -->
    <string name="txtLocationLatitude">Latitude: %f</string>
    <string name="txtLocationLongitude">Longitude: %f</string>
    <string name="txtLocationAltitude">Altitude: %f</string>
    <string name="txtLocationBearing">Bearing: %f</string>

    <!-- Network Context -->
    <string name="txtNetworkIsConnected">Internet Connected: %s</string>
    <string name="txtNetworkSSID">SSID: %s</string>
    <string name="txtNetworkConnectionType">Connection Type: %s</string>

    <!-- Eddystone Context -->
    <string name="txtBeaconInstance">Instance: %s</string>
    <string name="txtBeaconNamespace">Namespace: %s</string>

    <!-- iBeacon Context -->
    <string name="txtBeaconMajorID">Major ID: %s</string>
    <string name="txtBeaconMinorID">Minor ID: %s</string>
    <string name="txtBeaconUUID">UUID: %s</string>

    <!-- Audio Context -->
    <string name="txtHeadset">Headset Plugged: %s</string>
    <string name="txtBluetoothMedia">Bluetooth Media On: %s</string>
    <string name="txtBluetoothCall">Bluetooth Call On: %s</string>
    <string name="txtRingerVolume">Ringer Volume: %s</string>
    <string name="txtMediaVolume">Media Volume: %s</string>
    <string name="txtAlarmVolume">Alarm Volume: %s</string>

</resources>
